--- a/api_server/composer.json
+++ b/api_server/composer.json
@@ -27,8 +27,7 @@
     "php": ">=7.1",
     "php-di/php-di": "^6.0",
     "slim/psr7": "^0.5",
-    "slim/slim": "^4.1",
-    "slim/pdo": "~1.10"
+    "slim/slim": "^4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5"
@@ -41,9 +40,7 @@
     "psr-4": {
       "App\\": "src/"
     },
-    "files": [
-      "src/helpers.php"
-    ]
+    "files": []
   },
   "autoload-dev": {
     "psr-4": {
