商品情報を取得できてなかったミスを修正

--- a/api_server/plugins/statistics/Dockerfile
+++ b/api_server/plugins/statistics/Dockerfile
@@ -1,5 +1,15 @@
-FROM openjdk:8-jdk-alpine
-VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT exec java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar
+FROM gradle:jdk8-alpine as builder
+
+ADD --chown=gradle:gradle build.gradle .
+ADD --chown=gradle:gradle src src
+RUN gradle installDist
+
+
+FROM java:8-jre-alpine as runner
+
+RUN addgroup -S -g 1000 app \
+    && adduser -D -S -G app -u 1000 -s /bin/ash app
+USER app
+WORKDIR /home/app
+COPY --from=builder --chown=app:app /home/gradle/build/install .
+CMD StatisticsApplication/bin/StatisticsApplication
