--- a/api_server/plugins/statistics/build.gradle
+++ b/api_server/plugins/statistics/build.gradle
@@ -8,6 +8,12 @@ group = 'ml.misosiru'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'ml.misosiru.statistics.StatisticsApplication'
+applicationName = 'ml.misosiru.statistics'
+
 repositories {
 	mavenCentral()
 }
